# vizcraft

./: README.md  election_2024_Biram_Dah__Abeid.html  election_2024_El_Id_Mohameden_M’Bareck.html  election_2024_Hamadi_Sid’El_Moctar_Mohamed_Abdi.html  election_2024_Mamadou_Bocar_Ba.html  election_2024_Mohamed_Cheikh_Ghazouani.html  election_2024_Mohamed_Lemine_El_Mourteji__El_Wavi.html  election_2024_Outouma_Antoine_Souleymane_Soumaré.html  pyproject.toml
examples/: demo.py  election_map_bokeh.py
src/vizcraft/: __init__.py  bokeh_maps.py  plots.py  style.py
src/vizcraft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
