[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizcraft"
version = "0.1.0"
description = "Personal styled plotting library for a quiz"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
